Added Spotless with Palantir Java Format for deterministic code formatting
Spotless auto-formats all Java files at build time (4-space indent, 120-char line width),
eliminating formatting debates. Removed redundant Checkstyle whitespace rules that the
formatter now handles. All 385 tests pass, all static analysis clean.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>